add style scss, navigation, modal and fix the use on svg pattern

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,39 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:600");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
+
+body {
+  height: 100vh;
+  font-family: "Montserrat", sans-serif; }
+
+nav {
+  background-color: #333;
+  border-right: 2px solid greenyellow;
+  color: #eee;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 100vh;
+  z-index: 2; }
+  nav .logo {
+    text-align: center;
+    padding: 2rem 0; }
+    nav .logo img {
+      height: 100px;
+      width: 100px;
+      border-radius: 50%; }
+  nav ul {
+    list-style-type: none; }
+    nav ul li {
+      padding: 1.5rem; }
+    nav ul li:first-of-type {
+      border-top: 2px solid rgba(200, 200, 200, 0.6); }
+    nav ul a {
+      text-decoration: none;
+      color: #eee; }
+    nav ul a:hover,
+    nav ul a:focus {
+      text-decoration: underline; }
