--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
   box-sizing: border-box; }
 
 body {
-  height: 100vh;
+  height: 100%;
   font-family: "Montserrat", sans-serif; }
 
 nav {
@@ -17,7 +17,8 @@ nav {
   left: 0;
   width: 200px;
   height: 100vh;
-  z-index: 2; }
+  z-index: 2;
+  transform: translateX(-100%); }
   nav .logo {
     text-align: center;
     padding: 2rem 0; }
@@ -37,3 +38,173 @@ nav {
     nav ul a:hover,
     nav ul a:focus {
       text-decoration: underline; }
+
+.menu-toggle {
+  background-image: url(../../assets/menu-sprite30.svg);
+  animation-duration: 300ms;
+  animation-timing-function: steps(9);
+  animation-fill-mode: forwards;
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat; }
+  .menu-toggle.play {
+    animation-name: open-play; }
+
+@keyframes open-play {
+  0% {
+    background-position: 0px 0px; }
+  100% {
+    background-position: -216px 0px; } }
+
+header {
+  width: 100%;
+  position: fixed;
+  margin: 0 auto;
+  z-index: 3; }
+
+.header-container {
+  position: relative;
+  text-align: center; }
+  .header-container h1 {
+    padding-top: 4rem; }
+  .header-container p {
+    margin: 2rem 0;
+    padding: 0 1rem; }
+  .header-container button:focus {
+    outline: none; }
+
+.menu-toggle {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background-color: rgba(0, 0, 0, 0.9);
+  border: none;
+  border-radius: 5px; }
+
+.bars {
+  fill: #eee; }
+
+@media (max-height: 375px) {
+  .header-container h1 {
+    padding-top: 2rem; }
+  .header-container p {
+    margin: 1rem 0; } }
+
+.modal-container {
+  display: none;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 4; }
+
+.modal-container.show-modal {
+  display: block; }
+
+.modal {
+  position: absolute;
+  height: 96vh;
+  max-width: 100vw;
+  width: 88vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.9);
+  border-radius: 5px;
+  overflow: hidden;
+  animation: open-modal 0.8s ease-in; }
+
+.modal-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .modal-content img {
+    width: 100%;
+    height: auto; }
+
+.close-button {
+  position: absolute;
+  top: 20px;
+  right: 20px; }
+
+@keyframes open-modal {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+main {
+  height: 100vh;
+  position: relative;
+  overflow: hidden; }
+
+.slide__bg {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  transform: translateY(50%) scale(2);
+  filter: blur(40px);
+  z-index: -1; }
+
+.slide {
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .slide__image {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 88%;
+    opacity: 1;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    will-change: transform, opacity; }
+
+.slide__image-left {
+  transform: translateY(-20px); }
+
+.slide__image-right {
+  transform: translateY(20px); }
+
+.slider__pagination {
+  position: fixed;
+  bottom: 8vh;
+  width: 100%;
+  text-align: center; }
+
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 20px 40px;
+  border: 2px solid #eee;
+  line-height: 1;
+  font: 600 12px "Montserrat", sans-serif;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  color: white;
+  transition: all 0.3s ease;
+  appearance: none; }
+  .button:hover {
+    color: #eee;
+    background-color: white; }
+
+@media (max-width: 720px) {
+  .slide__bg {
+    transform: translateY(75%) scale(2); } }
+
+@media (orientation: landscape) {
+  .slide__image {
+    width: 68%; }
+  .slider__pagination {
+    bottom: 5vh; }
+  .button {
+    padding: 10px 20px; } }
