--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
 @import "./base/variables";
 @import "./base/base";
 @import "./components/navigation";
+@import "./components/header";
+@import "./components/modal";
+@import "./components/slides";
