complete integration of gsap success and site fully operational

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -24,7 +24,7 @@
 	background-color: rgba(0, 0, 0, 0.9);
 	border-radius: 5px;
 	overflow: hidden;
-	animation: open-modal 0.8s ease-in;
+	// animation: open-modal 1s ease-in;
 }
 
 .modal-content {
