--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ nav {
   left: 0;
   width: 200px;
   height: 100vh;
-  z-index: 2;
-  transform: translateX(-100%); }
+  transform: translateX(-100%);
+  z-index: 4; }
   nav .logo {
     text-align: center;
     padding: 2rem 0; }
@@ -113,8 +113,7 @@ header {
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 5px;
-  overflow: hidden;
-  animation: open-modal 0.8s ease-in; }
+  overflow: hidden; }
 
 .modal-content {
   width: 100%;
@@ -143,11 +142,16 @@ main {
   overflow: hidden; }
 
 .slide__bg {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
   position: absolute;
-  transform: translateY(50%) scale(2);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(2);
   filter: blur(40px);
+  opacity: 1;
+  transition: opacity 1s ease;
+  will-change: opacity;
   z-index: -1; }
 
 .slide {
@@ -175,14 +179,14 @@ main {
 
 .slider__pagination {
   position: fixed;
-  bottom: 8vh;
+  bottom: 6vh;
   width: 100%;
   text-align: center; }
 
 .button {
   position: relative;
   display: inline-block;
-  padding: 20px 40px;
+  padding: 10px 20px;
   border: 2px solid #eee;
   line-height: 1;
   font: 600 12px "Montserrat", sans-serif;
@@ -197,14 +201,6 @@ main {
     color: #eee;
     background-color: white; }
 
-@media (max-width: 720px) {
-  .slide__bg {
-    transform: translateY(75%) scale(2); } }
-
 @media (orientation: landscape) {
   .slide__image {
-    width: 68%; }
-  .slider__pagination {
-    bottom: 5vh; }
-  .button {
-    padding: 10px 20px; } }
+    width: 68%; } }
