--- a/scss/components/_slides.scss
+++ b/scss/components/_slides.scss
@@ -4,12 +4,29 @@ main {
 	overflow: hidden;
 }
 
+// .slide__bg {
+// 	height: 100vh;
+// 	width: 100vw;
+// 	position: absolute;
+// 	transform: translateY(50%) scale(2);
+// 	filter: blur(40px);
+// 	opacity: 1;
+// 	transition: opacity 1s ease;
+// 	will-change: opacity;
+// 	z-index: -1;
+// }
+
 .slide__bg {
-	height: 100vh;
 	width: 100vw;
+	height: 100vh;
 	position: absolute;
-	transform: translateY(50%) scale(2);
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(2);
 	filter: blur(40px);
+	opacity: 1;
+	transition: opacity 1s ease;
+	will-change: opacity;
 	z-index: -1;
 }
 
@@ -43,7 +60,7 @@ main {
 
 .slider__pagination {
 	position: fixed;
-	bottom: 8vh;
+	bottom: 6vh;
 	width: 100%;
 	text-align: center;
 }
@@ -51,7 +68,7 @@ main {
 .button {
 	position: relative;
 	display: inline-block;
-	padding: 20px 40px;
+	padding: 10px 20px;
 	border: 2px solid #eee;
 	line-height: 1; // Normalize height
 	font: 600 12px "Montserrat", sans-serif;
@@ -70,9 +87,6 @@ main {
 }
 
 @media (max-width: 720px) {
-	.slide__bg {
-		transform: translateY(75%) scale(2);
-	}
 }
 
 @media (orientation: landscape) {
@@ -80,13 +94,5 @@ main {
 		&__image {
 			width: 68%;
 		}
-	}
-
-	.slider__pagination {
-		bottom: 5vh;
-	}
-
-	.button {
-		padding: 10px 20px;
 	}
 }
