--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ nav {
       text-decoration: underline; }
 
 .menu-toggle {
-  background-image: url(../../assets/menu-sprite30.svg);
+  background-image: url(./../assets/menu-sprite30.svg);
   animation-duration: 300ms;
   animation-timing-function: steps(9);
   animation-fill-mode: forwards;
