--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -45,7 +45,7 @@ nav {
 }
 
 .menu-toggle {
-	background-image: url(../../assets/menu-sprite30.svg);
+	background-image: url(./../assets/menu-sprite30.svg);
 	animation-duration: 300ms;
 	animation-timing-function: steps(9);
 	animation-fill-mode: forwards;
